added validation to search box

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Start Page</title>
     <link rel="stylesheet" href="styles/main.css" />
+    <script src="javascript/jscript.js"></script>
 </head>
 
 <body>
@@ -18,8 +19,8 @@
             </ul>
         </div>
         <div class="menu-btn">
-            <button onclick="toggleMobileMenuVisibility()" class="dropbtn">&#9776;</button>
-            <div id="mobile-menu" class="menu-content">
+            <button onclick="toggleMobileMenuVisibility()" >&#9776;</button>
+            <div id="mobile-menu">
                 <ul>
                     <li><a href="#Gmail">Home</a></li>
                     <li><a href="#Images">About</a></li>
@@ -74,7 +75,7 @@
         </div>
     </footer>
 
-    <script src="javascript/jscript.js"></script>
+    
 </body>
 
 </html>
