added responsiveness to footer

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </ul>
         </div>
         <div class="menu-btn">
-            <button onclick="toggleMobileMenuVisibility()" >&#9776;</button>
+            <button onclick="toggleMobileMenuVisibility()" class="dropdownbtn" >&#9776;</button>
             <div id="mobile-menu">
                 <ul>
                     <li><a href="#Gmail">Home</a></li>
@@ -37,7 +37,7 @@
             <div class="form-elements ">
                 <div class="form-elements-btn">
                     <input onclick="checkSearchInput()" class="search-btn search-btn-1" type="submit" value="Google Search" />
-                    <input class="search-btn search-btn-2" type="submit" value="I'm Feeling Lucky" />
+                    <input onclick="checkSearchInput()" class="search-btn search-btn-2" type="submit" value="I'm Feeling Lucky" />
                 </div>
 
             </div>
