Added sign in link

--- a/index.html
+++ b/index.html
@@ -11,23 +11,28 @@
 </head>
 
 <body>
-    <header>
-        <div class="top-header">
-            <ul>
-                <li>Gmail</li>
-                <li>Images</li>
-            </ul>
-        </div>
-        <div class="menu-btn">
-            <button onclick="toggleMobileMenuVisibility()" class="dropdownbtn" >&#9776;</button>
-            <div id="mobile-menu">
-                <ul>
-                    <li><a href="#Gmail">Home</a></li>
-                    <li><a href="#Images">About</a></li>
-                </ul>
-            </div>
-        </div>
-    </header>
+    <div>
+            <header>
+                    <div class="top-header">
+                        <ul>
+                            <li><a href="#Gmail">Gmail</a></li>
+                            <li><a href="#Images">Images</a></li>
+                            <li><a href="#Images">Sign in</a></li>
+                        </ul>
+                    </div>
+                    <div class="menu-btn">
+                        <button onclick="toggleMobileMenuVisibility()" class="dropdownbtn" >&#9776;</button>
+                        <div id="mobile-menu">
+                            <ul>
+                                <li><a href="#Gmail">Gmail</a></li>
+                                <li><a href="#Images">Images</a></li>
+                                <li><a href="#Images">Sign in</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </header>
+    </div>
+    
     <div class="main-content">
         <img alt="google logo" src="images/googlelogo_color_272x92dp.png" />
         <form name="google-form">
