--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <ul>
                             <li><a href="#Gmail">Gmail</a></li>
                             <li><a href="#Images">Images</a></li>
-                            <li><a href="#Images">Sign in</a></li>
+                            <li><a href="#SignIn">Sign in</a></li>
                         </ul>
                     </div>
                     <div class="menu-btn">
@@ -26,7 +26,7 @@
                             <ul>
                                 <li><a href="#Gmail">Gmail</a></li>
                                 <li><a href="#Images">Images</a></li>
-                                <li><a href="#Images">Sign in</a></li>
+                                <li><a href="#SignIn">Sign in</a></li>
                             </ul>
                         </div>
                     </div>
@@ -50,11 +50,11 @@
         <div class="languages">
             <ul>
                 <li>Google offered in: </li>
-                <li>Luganda</li>
-                <li>Kiswahili</li>
-                <li>Ikinyarwanda</li>
-                <li>Luo</li>
-                <li>Runyakitara</li>
+                <li><a href="#Luganda">Luganda</a></li>
+                <li><a href="#Kiswahili">Kiswahili</a></li>
+                <li><a href="#Ikinyarwanda">Ikinyarwanda</a></li>
+                <li><a href="#Luo">Luo</a></li>
+                <li><a href="#Runyakitara">Runyakitara</a></li>
             </ul>
         </div>
     </div>
@@ -65,16 +65,16 @@
         <div class="footer-bottom">
             <div class="footer-left-menu">
                 <ul>
-                    <li>Advertising</li>
-                    <li>Business</li>
-                    <li>About</li>
+                    <li><a href="#Advertising">Advertising</a></li>
+                    <li><a href="#Business">Business</a></li>
+                    <li><a href="#About">About</a></li>
                 </ul>
             </div>
             <div class="footer-right-menu">
                 <ul>
-                    <li>Privacy</li>
-                    <li>Terms</li>
-                    <li>Settings</li>
+                    <li><a href="#Privacy">Privacy</a></li>
+                    <li><a href="#Terms">Terms</a></li>
+                    <li><a href="#Settings">Settings</a></li>
                 </ul>
             </div>
         </div>
