--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <ul>
                             <li><a href="#Gmail">Gmail</a></li>
                             <li><a href="#Images">Images</a></li>
-                            <li><a href="#SignIn">Sign in</a></li>
+                            <li><a href="#Account"><img alt="Account" src="images/ann.jpg" /></a></li>
                         </ul>
                     </div>
                     <div class="menu-btn">
@@ -34,7 +34,14 @@
     </div>
     
     <div class="main-content">
-        <img alt="google logo" src="images/googlelogo_color_272x92dp.png" />
+        <div class="google-logo">
+            <span>G</span>
+            <span>o</span>
+            <span>o</span>
+            <span>g</span>
+            <span>l</span>
+            <span>e</span>
+        </div>
         <form name="google-form">
             <div class="form-elements">
                 <input class="search-box" type="text" placeholder="Search" name="search-text" />
@@ -47,7 +54,7 @@
 
             </div>
         </form>
-        <div class="languages">
+        <small class="languages">
             <ul>
                 <li>Google offered in: </li>
                 <li><a href="#Luganda">Luganda</a></li>
@@ -56,7 +63,7 @@
                 <li><a href="#Luo">Luo</a></li>
                 <li><a href="#Runyakitara">Runyakitara</a></li>
             </ul>
-        </div>
+        </small>
     </div>
     <footer>
         <div class="footer-top">
